environments/production/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-backend
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retail-backend
  template:
    spec:
      containers:
      - name: api
        image: 154290454465.dkr.ecr.ap-south-1.amazonaws.com/retail-backend:latest
        ports:
        - containerPort: 8080
        
        # 🔗 1. UPDATE DB_HOST TO YOUR LIVE MUMBAI ENDPOINT (No port suffix)
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        
---
apiVersion: v1
kind: Service
metadata:
  name: retail-backend-service
  namespace: production
spec:
  type: ClusterIP # Kept private inside the cluster network bounds
  selector:
    app: retail-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
