environments/production/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-frontend
  namespace: production
  labels:
    app: retail-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retail-frontend
  template:
    metadata:
      labels:
        app: retail-frontend
    spec:
      containers:
      - name: web
        image: 154290454465.dkr.ecr.ap-south-1.amazonaws.com/retail-frontend:latest
        ports:
        - containerPort: 80
        # 🔌 UPDATED: Environment Variables Added Here
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: retail-frontend-service
  namespace: production
spec:
  type: NodePort 
  selector:
    app: retail-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-application-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: retail-frontend-service
            port:
              number: 80
